Add obs. object subclass, fix target class, augment class designations
A follow-on patch will regenerate Make-managed files.

References:
* [UCO OC-119] (CP-43) Represent recoverability of unallocated files

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/examples/illustrations/recoverability/src/recoverability-sqlite_whatsapp.json
+++ b/examples/illustrations/recoverability/src/recoverability-sqlite_whatsapp.json
@@ -1,7 +1,10 @@
 [
     {
         "@id": "kb:4026FABD-924D-4138-A6BA-73DF2EB37BCB",
-        "@type": "uco-observable:ObservableObject",
+        "@type": [
+            "drafting:RecoveredObject",
+            "uco-observable:File"
+        ],
         "uco-core:hasFacet": [
             {
                 "@type": "uco-observable:FileFacet",
