--- a/examples/illustrations/recoverability/src/README.md.in
+++ b/examples/illustrations/recoverability/src/README.md.in
@@ -14,11 +14,11 @@ If you need to edit its content, edit src/README.md.in, and then re-run `make` t
 There is a requirement to represent the recoverability status of entries in file systems, particularly in digital forensic examinations. 
 For clarity and completeness, it is necessary to represent the recoverability of unallocated filename, metadata, and content.
 
-These states can be represented using the `UnallocatedRecoverabilityFacet` with the following properties and values:
+These states can be represented using the `RecoveredObjectFacet` with the following properties and values:
 
-* `nameRecoverabilityStatus`: recovered, overwritten, unknown
-* `metadataRecoverabilityStatus`: recovered, overwritten, unknown 
-* `contentRecoverabilityStatus`: recovered, partially recovered, overwritten, unknown
+* `nameRecoveredStatus`: recovered, overwritten, unknown
+* `metadataRecoveredStatus`: recovered, overwritten, unknown 
+* `contentRecoveredStatus`: recovered, partially recovered, overwritten, unknown
 
 This representation applies to file systems as well as "file system within a file" data structures such as SQLite databases and Windows Registry hives.
 For further details and background, see [Standardization of File Recovery Classification and Authentication](https://www.nist.gov/publications/standardization-file-recovery-classification-and-authentication). Additional recoverability scenarios are available in the initial proposal [Representing Recoverability of Unallocated Files](https://caseontology.org/resources/references/Representing%20Recoverability%20of%20Unallocated%20Files%20using%20CASE%20UCO%2031Jan2018.pdf) with the caveat that examples use an early version of CASE/UCO.
@@ -40,19 +40,19 @@ The following shows a file system entry that has recoverable filename "~badquinn
 
 ![AutopsyCrossoverDeleted.png](https://files.caseontology.org/CASE-Examples/examples/illustrations/recoverability/AutopsyCrossoverDeleted.png)
 
-This recovered file system entry can be represented using the `observable:UnallocatedRecoverabilityFacet` as follows:
+This recovered file system entry can be represented using the `observable:RecoveredObjectFacet` as follows:
 
 ```json
 @RECOVERABILITY_BADQUINN_OST_TMP_JSON@
 ```
 
-Again using the [Crossover](https://caseontology.org/examples/crossover/) shared dataset, the LNK file "Users/Harley Quinn/AppData/Roaming/Microsoft/Windows/Recent/Thebatplan.lnk" references a file on a USB device "D:\Thebatplan" with associated metadata represented here, and the `contentRecoverabilityStatus` unknown:
+Again using the [Crossover](https://caseontology.org/examples/crossover/) shared dataset, the LNK file "Users/Harley Quinn/AppData/Roaming/Microsoft/Windows/Recent/Thebatplan.lnk" references a file on a USB device "D:\Thebatplan" with associated metadata represented here, and the `contentRecoveredStatus` unknown:
 
 ```json
 @RECOVERABILITY_CROSSOVER_THEBATPLAN_LNK_JSON@
 ```
 
-Similar to a LNK file on Windows, entries in the external.db entry on the Samsung device in the Crossover shared dataset can be represented using the `observable:UnallocatedRecoverabilityFacet` with the `contentRecoverabilityStatus` unknown. For instance, the "files" table in the SQLite database "Samsung Galaxy S6 Edge / UFED File Root / USERDATA (ExtX) / Root / data / com.android.providers.media / databases / external.db" references the file IMG-20181120-WA0000.jpg:
+Similar to a LNK file on Windows, entries in the external.db entry on the Samsung device in the Crossover shared dataset can be represented using the `observable:RecoveredObjectFacet` with the `contentRecoveredStatus` unknown. For instance, the "files" table in the SQLite database "Samsung Galaxy S6 Edge / UFED File Root / USERDATA (ExtX) / Root / data / com.android.providers.media / databases / external.db" references the file IMG-20181120-WA0000.jpg:
 
 ```json
 @RECOVERABILITY_SQLITE_WHATSAPP_JSON@
@@ -60,12 +60,12 @@ Similar to a LNK file on Windows, entries in the external.db entry on the Samsun
 
 # SQLite Entry Recoverability
 
-SQLite records that are recoverable can also be represented using the `observable:UnallocatedRecoverabilityFacet`. For example, this Facebook messenger chat:
+SQLite records that are recoverable can also be represented using the `observable:RecoveredObjectFacet`. For example, this Facebook messenger chat:
 
 ![FacebookChat.png](https://files.caseontology.org/CASE-Examples/examples/illustrations/recoverability/FacebookChat.png)
 
 
-This recovered chat message can be represented using the `observable:UnallocatedRecoverabilityFacet`, noting that the sent location does not appear to be recovered, indicating that the content is partially recovered.
+This recovered chat message can be represented using the `observable:RecoveredObjectFacet`, noting that the sent location does not appear to be recovered, indicating that the content is partially recovered.
 
 ```json
 @RECOVERABILITY_DIANA_SENT_LOCATION_JSON@
