--- a/examples/illustrations/configured_tool/configured_tool.json
+++ b/examples/illustrations/configured_tool/configured_tool.json
@@ -1,6 +1,7 @@
 {
     "@context": {
         "case-investigation": "https://ontology.caseontology.org/case/investigation/",
+        "drafting": "http://example.org/ontology/drafting/",
         "kb": "http://example.org/kb/",
         "uco-action": "https://ontology.unifiedcyberontology.org/uco/action/",
         "uco-core": "https://ontology.unifiedcyberontology.org/uco/core/",
@@ -23,7 +24,10 @@
         },
         {
             "@id": "kb:Tool-be707329-48fe-4d5d-84f3-7978ba63869e",
-            "@type": "uco-tool:Tool",
+            "@type": "drafting:ConfiguredTool",
+            "drafting:isConfigurationOf": {
+                "@id": "kb:Tool-0b635b9f-bdb8-4492-9b4e-dec6797b82db"
+            },
             "uco-core:name": "IDA Pro",
             "uco-tool:toolType": "binary code analysis tool",
             "uco-tool:creator": {
@@ -41,18 +45,6 @@
                     }
                 }
             ]
-        },
-        {
-            "@id": "kb:Relationship-f32b41f8-2b33-4f0f-9bb4-3a0a0752e3ec",
-            "@type": "uco-core:Relationship",
-            "uco-core:isDirectional": true,
-            "uco-core:source": {
-                "@id": "kb:Tool-be707329-48fe-4d5d-84f3-7978ba63869e"
-            },
-            "uco-core:target": {
-                "@id": "kb:Tool-0b635b9f-bdb8-4492-9b4e-dec6797b82db"
-            },
-            "uco-core:kindOfRelationship": "Is_Configured_Version_Of"
         },
         {
             "@id": "kb:Action-94446a56-1f78-42e4-a4f4-ec94ad7e9118",
@@ -91,7 +83,10 @@
         },
         {
             "@id": "kb:Tool-f40e2a5f-7fdf-491f-8c87-b4cb766a6377",
-            "@type": "uco-tool:Tool",
+            "@type": "drafting:ConfiguredTool",
+            "drafting:isConfigurationOf": {
+                "@id": "kb:Tool-0b635b9f-bdb8-4492-9b4e-dec6797b82db"
+            },
             "uco-core:name": "IDA Pro",
             "uco-tool:toolType": "binary code analysis tool",
             "uco-tool:creator": {
@@ -109,18 +104,6 @@
                     }
                 }
             ]
-        },
-        {
-            "@id": "kb:Relationship-fd59e98c-b31c-48c8-adde-07b5358911da",
-            "@type": "uco-core:Relationship",
-            "uco-core:isDirectional": true,
-            "uco-core:source": {
-                "@id": "kb:Tool-f40e2a5f-7fdf-491f-8c87-b4cb766a6377"
-            },
-            "uco-core:target": {
-                "@id": "kb:Tool-0b635b9f-bdb8-4492-9b4e-dec6797b82db"
-            },
-            "uco-core:kindOfRelationship": "Is_Configured_Version_Of"
         },
         {
             "@id": "kb:Action-ce95584e-5065-4287-83fd-81df2ac72180",
@@ -159,7 +142,10 @@
         },
         {
             "@id": "kb:Tool-134e3cc0-7f74-4ea2-9ac1-3c447f4f6195",
-            "@type": "uco-tool:Tool",
+            "@type": "drafting:ConfiguredTool",
+            "drafting:isConfigurationOf": {
+                "@id": "kb:Tool-0b635b9f-bdb8-4492-9b4e-dec6797b82db"
+            },
             "uco-core:name": "IDA Pro",
             "uco-tool:toolType": "binary code analysis tool",
             "uco-tool:creator": {
@@ -179,18 +165,6 @@
                     }
                 }
             ]
-        },
-        {
-            "@id": "kb:Relationship-529c3413-9706-489c-ad61-e65c989240f4",
-            "@type": "uco-core:Relationship",
-            "uco-core:isDirectional": true,
-            "uco-core:source": {
-                "@id": "kb:Tool-134e3cc0-7f74-4ea2-9ac1-3c447f4f6195"
-            },
-            "uco-core:target": {
-                "@id": "kb:Tool-0b635b9f-bdb8-4492-9b4e-dec6797b82db"
-            },
-            "uco-core:kindOfRelationship": "Is_Configured_Version_Of"
         },
         {
             "@id": "kb:Action-1a8cd716-c0c6-42d4-955f-19b2b9f0e3e6",
