--- a/examples/illustrations/analysis/src/README.md.in
+++ b/examples/illustrations/analysis/src/README.md.in
@@ -12,7 +12,7 @@ This example illustrates manual software malware analysis within the Cyber Threa
 
 ## Multimedia classification
 
-This example illustrates multimedia classification
+This example illustrates multimedia classification.
 
 ```json
 @ANALYSIS_MULTIMEDIA_CLASSIFICATION_JSON@
