Add review for next-major unstable branch
A follow-on patch will regenerate Make-managed files.

References:
* https://github.com/ucoProject/UCO/issues/493
* https://github.com/ucoProject/UCO/issues/508

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "dependencies/CASE-unstable"]
 	path = dependencies/CASE-unstable
 	url = https://github.com/casework/CASE-Archive.git
+[submodule "dependencies/CASE-unstable-2.0.0"]
+	path = dependencies/CASE-unstable-2.0.0
+	url = https://github.com/casework/CASE-Archive.git
