Delegate UCO unstable branch tracking to CASE-unstable submodule
This removes the potential for a synchronization issue if the UCO
submodule pointer gets ahead of the state the CASE submodule's submodule
[sic.] is pointing at.

No effects were observed on Make-managed files.

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/dependencies/Makefile
+++ b/dependencies/Makefile
@@ -20,8 +20,8 @@ case_develop_ttls := \
 
 case_unstable_ttls := \
   $(wildcard CASE-unstable/ontology/*/*.ttl) \
-  $(wildcard UCO-unstable/ontology/*/*.ttl) \
-  $(wildcard UCO-unstable/ontology/uco/*/*.ttl)
+  $(wildcard CASE-unstable/dependencies/UCO/ontology/*/*.ttl) \
+  $(wildcard CASE-unstable/dependencies/UCO/ontology/uco/*/*.ttl)
 
 case_unstable_next_major_ttls := \
   $(wildcard CASE-unstable-2.0.0/ontology/*/*.ttl) \
