Delegate UCO develop branch tracking to CASE-develop submodule
No effects were observed on Make-managed files.

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/dependencies/Makefile
+++ b/dependencies/Makefile
@@ -15,8 +15,8 @@ SHELL := /bin/bash
 
 case_develop_ttls := \
   $(wildcard CASE-develop/ontology/*/*.ttl) \
-  $(wildcard UCO-develop/ontology/*/*.ttl) \
-  $(wildcard UCO-develop/ontology/uco/*/*.ttl)
+  $(wildcard CASE-develop/dependencies/UCO/ontology/*/*.ttl) \
+  $(wildcard CASE-develop/dependencies/UCO/ontology/uco/*/*.ttl)
 
 case_unstable_ttls := \
   $(wildcard CASE-unstable/ontology/*/*.ttl) \
