Add prerelease review and builds for CASE develop-2.0.0 branch
A follow-on patch will regenerate Make-managed files.

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "dependencies/CASE-develop"]
 	path = dependencies/CASE-develop
 	url = https://github.com/casework/CASE.git
+[submodule "dependencies/CASE-develop-2.0.0"]
+	path = dependencies/CASE-develop-2.0.0
+	url = https://github.com/casework/CASE.git
 [submodule "dependencies/CASE-unstable"]
 	path = dependencies/CASE-unstable
 	url = https://github.com/casework/CASE-Archive.git
