--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,16 @@
 [submodule "dependencies/CASE-develop"]
 	path = dependencies/CASE-develop
 	url = https://github.com/casework/CASE.git
+	branch = develop
 [submodule "dependencies/CASE-develop-2.0.0"]
 	path = dependencies/CASE-develop-2.0.0
 	url = https://github.com/casework/CASE.git
+	branch = develop-2.0.0
 [submodule "dependencies/CASE-unstable"]
 	path = dependencies/CASE-unstable
 	url = https://github.com/casework/CASE-Archive.git
+	branch = unstable
 [submodule "dependencies/CASE-unstable-2.0.0"]
 	path = dependencies/CASE-unstable-2.0.0
 	url = https://github.com/casework/CASE-Archive.git
+	branch = unstable-2.0.0
