Add kb compilation
This patch adds a compilation of all kb graphs as a non-persisted
artifact.  The benefit of this graph is, so far, finding duplicated-node
errors.

No effects were observed on Make-managed files.

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/examples/illustrations/Makefile
+++ b/examples/illustrations/Makefile
@@ -37,6 +37,9 @@ all-%:
 
 check: \
   $(check_targets)
+	$(MAKE) \
+	  --file postvisit.mk \
+	  check
 
 check-%:
 	export x=$@ \
@@ -46,6 +49,9 @@ check-%:
 
 clean: \
   $(clean_targets)
+	@$(MAKE) \
+	  --file postvisit.mk \
+	  clean
 
 clean-%:
 	@export x=$@ \
