--- a/examples/illustrations/database_records/src/README.md.in
+++ b/examples/illustrations/database_records/src/README.md.in
@@ -43,3 +43,10 @@ This allows an identified artifact (such as a message) to be linked to a databas
 @DATABASE_RECORDS_ARTIFACT_LINKING_JSON@
 
 ```
+
+
+## Relationship illustrations
+
+Using a proof-of-concept illustration system, a render of this scenario's `uco-core:Relationship` objects is available:
+
+![figures/database_records-relationships.svg](figures/database_records-relationships.svg)
