--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,7 @@
 	path = dependencies/CASE-unstable-2.0.0
 	url = https://github.com/casework/CASE-Archive.git
 	branch = unstable-2.0.0
+[submodule "dependencies/CDO-Shapes-Time"]
+	path = dependencies/CDO-Shapes-Time
+	url = https://github.com/Cyber-Domain-Ontology/CDO-Shapes-Time.git
+	branch = main
