Draft BFO intervals of existence figure
A follow-on patch will regenerate Make-managed files.

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/examples/illustrations/existence_intervals/figures/Makefile
+++ b/examples/illustrations/existence_intervals/figures/Makefile
@@ -20,6 +20,7 @@ top_srcdir := $(shell cd ../../../.. ; pwd)
 
 all: \
   abstraction_all.svg \
+  abstraction_bfo.svg \
   abstraction_gufo.svg \
   abstraction_time.svg \
   abstraction_uco_1_3_0_action.svg \
