Track UCO-Profile-Time for draft concept review in Spear Phishing example
No effects were observed on Make-managed files.

References:
* https://github.com/ucoProject/UCO/issues/651

Signed-off-by: Alex Nelson <alexander.nelson@nist.gov>

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,7 @@
 	path = dependencies/CASE-unstable-2.0.0
 	url = https://github.com/casework/CASE-Archive.git
 	branch = unstable-2.0.0
+[submodule "dependencies/UCO-Profile-Time"]
+	path = dependencies/UCO-Profile-Time
+	url = https://github.com/ucoProject/UCO-Profile-Time.git
+	branch = main
